log
15 May 2022 20:23:12: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
39767d4
